--- a/packages/web/styles/globals.css
+++ b/packages/web/styles/globals.css
@@ -5,3 +5,8 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
+
+:root {
+  --blue: #0070f3;
+  --b-radius: 5px;
+}
