--- a/packages/web/styles/navbar.module.css
+++ b/packages/web/styles/navbar.module.css
@@ -1,7 +1,7 @@
 /* Used in Navbar.tsx */
 
 .navbar {
-  border-bottom: 1px solid #000000;
+  border-bottom: 1px solid black;
   display: grid;
   grid-template-areas: "left main main main empty right";
 }
@@ -17,8 +17,8 @@
   margin-top: 1.25rem;
   margin-bottom: 1.25rem;
   grid-area: main;
-  border-radius: 5px;
-  border: 1px solid #000000;
+  border-radius: var(--b-radius);
+  border: 1px solid black;
   padding-left: 1rem;
   font-size: 18px;
 }
@@ -34,9 +34,9 @@
   margin-bottom: 1.25rem;
   margin-right: 1.5rem;
   text-decoration: none;
-  background-color: #0070f3;
-  color: #ffffff;
+  background-color: var(--blue);
+  color: white;
   font-size: 20px;
   padding-top: 0.4rem;
-  border-radius: 5px;
+  border-radius: var(--b-radius);
 }
