--- a/packages/web/styles/navbar.module.css
+++ b/packages/web/styles/navbar.module.css
@@ -21,6 +21,7 @@
   border: 1px solid black;
   padding-left: 1rem;
   font-size: 18px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .search::placeholder {
@@ -39,4 +40,5 @@
   font-size: 20px;
   padding-top: 0.4rem;
   border-radius: var(--b-radius);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
