Added: - full text search - frontend search - login and logout

--- a/packages/web/styles/globals.css
+++ b/packages/web/styles/globals.css
@@ -10,6 +10,8 @@ body {
   --blue: #0070f3;
   --green: #50e3c2;
   --gray: #f1f1f1;
+  --red: #ee0000;
+  --light-red: #f7d4d6;
   --b-radius: 5px;
 }
 
