--- a/packages/web/styles/question.module.css
+++ b/packages/web/styles/question.module.css
@@ -25,6 +25,8 @@
   text-align: center;
   margin-top: 1rem;
   margin-bottom: 1rem;
+  padding-right: 1rem;
+  padding-left: 1rem;
 }
 
 .subject > p {
