--- a/packages/web/styles/question.module.css
+++ b/packages/web/styles/question.module.css
@@ -25,8 +25,8 @@
   text-align: center;
   margin-top: 1rem;
   margin-bottom: 2rem;
-  padding-right: 0.5rem;
-  padding-left: 0.5rem;
+  margin-left: 1rem;
+  padding: 0.25rem 1rem 0.25rem 1rem;
 }
 
 .subject > p {
