--- a/packages/web/styles/home.module.css
+++ b/packages/web/styles/home.module.css
@@ -90,6 +90,7 @@
   padding: 0.5rem 1rem 0.5rem 1rem;
   border-radius: var(--b-radius);
   margin-bottom: 0.5rem;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .page_right {
@@ -100,4 +101,5 @@
   padding: 0.5rem 1rem 0.5rem 1rem;
   border-radius: var(--b-radius);
   margin-bottom: 0.5rem;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
